edit netlify.toml to fix coep issue

--- a/netlify.toml
+++ b/netlify.toml
@@ -9,8 +9,8 @@
 [[headers]]
   for = "/*"
   [headers.values]
+    Cross-Origin-Embedder-Policy = "credentialless"
     Cross-Origin-Opener-Policy = "same-origin"
-    Cross-Origin-Embedder-Policy = "require-corp"
 
 [[headers]]
   for = "src/service-worker.js"
