--- a/netlify.toml
+++ b/netlify.toml
@@ -9,11 +9,10 @@
 [[headers]]
   for = "/*"
   [headers.values]
-    Cross-Origin-Embedder-Policy = "credentialless"
     Cross-Origin-Opener-Policy = "same-origin"
 
 [[headers]]
-  for = "src/service-worker.js"
+  for = "/service-worker.js"
   [headers.values]
     Cross-Origin-Resource-Policy = "same-site"
 
@@ -26,7 +25,6 @@
   for = "/styles.css"
   [headers.values]
     Cross-Origin-Resource-Policy = "same-site"
-
 
 [[headers]]
   for = "/manifest.json"
