--- a/netlify.toml
+++ b/netlify.toml
@@ -5,3 +5,8 @@
   from = "/*"
   to = "/index.html"
   status = 200
+
+[[headers]]
+  for = "/.netlify/functions/config"
+  [headers.values]
+    Cross-Origin-Resource-Policy = "cross-origin"
